# pdk_UPVfab_v2

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  install_tech.py  pyproject.toml
.github/: release-drafter.yml  write_cells.py
.github/workflows/: release.yml  test_code.yml
docs/: _config.yml  _toc.yml  api.rst
examples/Heat/: femwell-Si-pillar.ipynb  femwell-example.ipynb
tests/: test_pdk.py  test_si220_cband.py
tests/gds_ref_sin300/: bend_euler.gds  bend_metal.gds  bend_s.gds  bend_s_metal.gds  compass.gds  coupler.gds  coupler_rib.gds  coupler_ring.gds  crossing.gds  die.gds  grating_coupler_rectangular.gds  mmi1x2.gds  mmi1x2_rib.gds  mmi2x2.gds  mmi2x2_rib.gds  mzi.gds  pad.gds  rectangle.gds  ring_double.gds  ring_single.gds  spiral.gds  spiral_racetrack_heater.gds  straight.gds  straight_heater_metal.gds  straight_metal.gds  straight_rib.gds  straight_strip.gds  taper.gds  taper_metal.gds  taper_strip_to_ridge.gds  text_rectangular.gds  text_rectangular_multi_layer.gds  trans_rib20.gds  via_stack_heater_mtop.gds
tests/test_pdk/: test_netlists_bend_euler_.yml  test_netlists_bend_s_.yml  test_netlists_coupler_.yml  test_netlists_coupler_rib_.yml  test_netlists_coupler_ring_.yml  test_netlists_grating_coupler_rectangular_.yml  test_netlists_mzi_.yml  test_netlists_ring_double_.yml  test_netlists_ring_single_.yml  test_netlists_spiral_.yml  test_netlists_spiral_racetrack_heater_.yml  test_netlists_taper_.yml  test_netlists_taper_metal_.yml  test_netlists_taper_strip_to_ridge_.yml  test_netlists_text_rectangular_.yml  test_netlists_text_rectangular_multi_layer_.yml  test_netlists_trans_rib20_.yml  test_netlists_via_stack_heater_mtop_.yml  test_settings_bend_euler_.yml  test_settings_bend_s_.yml  test_settings_coupler_.yml  test_settings_coupler_rib_.yml  test_settings_coupler_ring_.yml  test_settings_grating_coupler_rectangular_.yml  test_settings_ring_double_.yml  test_settings_ring_single_.yml  test_settings_spiral_.yml  test_settings_spiral_racetrack_heater_.yml  test_settings_straight_.yml  test_settings_straight_rib_.yml  test_settings_straight_strip_.yml  test_settings_taper_.yml  test_settings_taper_metal_.yml  test_settings_taper_strip_to_ridge_.yml  test_settings_text_rectangular_.yml  test_settings_text_rectangular_multi_layer_.yml  test_settings_trans_rib20_.yml  test_settings_via_stack_heater_mtop_.yml
training/IPSP/Lab1/: 010_MODESOLVER_v2025_Student.ipynb  010_WAVEGUIDES_v2025_Student.ipynb  LabBook_010.pptx
training/IPSP/Lab2/: 020_COUPLERS_v2025_Student.ipynb  LabBook_020.pptx
training/IPSP/Lab3/: 30_Circuits_&_CompactModels.ipynb  (+1 more)
training/Lab0/: 010_MODESOLVER_v2025_Student.ipynb  020_COUPLERS_v2025_Student.ipynb
training/Lab1/: 10_WAVEGUIDES_v2025_Student.ipynb  LabBook_1.pptx
training/Lab2/: LabBook_2.pptx
training/Lab3/: 30_INTERFEROMETERS_v2025_STUDENTS_UPDATE.ipynb  SiN-h300nm-w1000nm-Air.txt  SiN-h300nm-w1000nm-Cladding.txt  SiN-h300nm-w1000nm-Water.txt
upvfab/: __init__.py  test_schematic.pic.yml  test_schematic.scm.yml
upvfab/models/: __init__.py
(+10 files in other folders)
