# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html

[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]

[project]
authors = [
  {name = "gdsfactory", email = "contact@gdsfactory.com"}
]
classifiers = [
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent"
]
dependencies = [
  "gdsfactory~=9.19.0",
  "doroutes>=0.2.0",
  "gdsfactoryplus",
  "gplugins[sax,femwell,tidy3d]~=1.4.2",
  "meow-sim",
]
description = "Sample Photonics PDK"
keywords = ["python"]
license = {file = "LICENSE"}
name = "upvfab"
readme = "README.md"
requires-python = "~=3.12.0"
version = "0.0.0"

[project.optional-dependencies]
dev = [
  "pre-commit",
  "jsondiff",
  "pytest",
  "pytest-cov",
  "pytest_regressions",
  "pytest-github-actions-annotate-failures"
]
docs = [
  "jupytext",
  "matplotlib",
  "jupyter-book==1.0.4.post1"
]

[tool.codespell]
ignore-words-list = "te, te/tm, te, ba, fpr, fpr_spacing, ro, nd, donot, schem"

[tool.gdsfactoryplus.drc]
timeout = 300

[tool.gdsfactoryplus.pdk]
name = "upvfab.sin300.cband"

[tool.gdsfactoryplus]
name = "upvfab.sin300.cband"

[tool.gdsfactoryplus.sim.wls]
max = 1.6
min = 1.5
num = 1000

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pylsp-mypy]
enabled = true
live_mode = true
strict = true

[tool.pytest.ini_options]
# addopts = --tb=no
addopts = '--tb=short'
norecursedirs = ["extra/*.py"]
python_files = ["upvfab/*.py", "notebooks/*.ipynb", "tests/*.py"]
testpaths = ["upvfab/", "tests"]

[tool.ruff]
fix = true

[tool.ruff.lint]
ignore = [
  "E501",  # line too long, handled by black
  "B008",  # do not perform function calls in argument defaults
  "C901",  # too complex
  "B905",  # `zip()` without an explicit `strict=` parameter
  "C408"  # C408 Unnecessary `dict` call (rewrite as a literal)
]
select = [
  "B",  # flake8-bugbear
  "C",  # flake8-comprehensions
  "D",  # pydocstyle
  "E",  # pycodestyle errors
  "F",  # pyflakes
  "I",  # isort
  "T10",  # flake8-debugger
  "UP",  # pyupgrade
  "W"  # pycodestyle warnings
]

[tool.ruff.lint.per-file-ignores]
"upvfab/sin300/cband/cells/__init__.py" = ["F403"]  # allowing star imports to aggregate cells
"upvfab/sin300/oband/cells/__init__.py" = ["F403"]  # allowing star imports to aggregate cells

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.setuptools.package-data]
"*" = ["*.csv", "*.yaml", "*.yml", "*.gds", "*.lyp", "*.oas", "*.lyt", "*.dat", "*.nc", "*.svg"]

[tool.setuptools.packages]
find = {}

[tool.tbump]

[[tool.tbump.file]]
src = "README.md"

[[tool.tbump.file]]
src = "pyproject.toml"

[[tool.tbump.file]]
src = "upvfab/__init__.py"

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "v{new_version}"

[tool.tbump.version]
current = "0.0.0"
# Example of a semver regexp.
# Make sure this matches current_version before
# using tbump
regex = '''
  (?P<major>\d+)
  \.
  (?P<minor>\d+)
  \.
  (?P<patch>\d+)
  '''
